refs: replace selected bibliography with fixed 1–30 list matching academic PDFs and LITERATURE_REVIEW.md numbering

--- a/academic/paper_topolojik_risk_2025.tex
+++ b/academic/paper_topolojik_risk_2025.tex
@@ -199,24 +199,40 @@ react-aria-components & react-aria & 0.000009 \\
 \section{Sonuç}
 Popülerlik ve yapısal merkeziyet, indirime dayalı çekirdekte \emph{Bileşik Risk Skoru} ile birleştirildiğinde, hem tespit hatları hem de politika/bütünlük mekanizmaları için eyleme dönük \emph{öncelik listeleri} üretmektedir. Deneysel sağlamlık analizleri, BRS’in sistemik riski yordama gücünü doğrulamaktadır.
 
-\section*{Kaynakça (Seçilmiş)}
+\clearpage
+
+\section*{Kaynakça}
 \begin{longtable}{@{}p{0.06\linewidth}p{0.91\linewidth}@{}}
 {}[1] & Wyss, E. (2025). A New Frontier for Software Security: Diving Deep Into npm.\\
-{}[2] & Jaisri, P.; Reid, B.; Kula, R. (2024). Self-Contained Libraries in NPM.\\
-{}[3] & Yu, S. (2024). Accurate and Efficient SBOM Generation.\\
-{}[4] & Ohm, M.; Plate, H.; Sykosch, A.; Meier, M. (2020). Backstabber’s Knife Collection.\\
-{}[5] & Rahman, I. et al. (2024). TOOD/PFET.\\
-{}[6] & Hastings, T. (2024). Combating Source Poisoning.\\
-{}[7] & Wang, M.; Wu, P.; Luo, Q. (2023). SSC Threat Portrait.\\
-{}[8] & Liu, C.; Chen, S. et al. (ICSE 2022). DVGraph/DTResolver.\\
-{}[9] & Ahlstrom, D. (2025). Bağımlılık Budama Etkileri.\\
-{}[10] & Imtiaz, N. (2023). Toward Secure Use of OSS Dependencies.\\
-{}[11] & Duan, R. et al. (2020). Measuring Supply Chain Attacks on Package Managers.\\
-{}[12] & Ladisa, P. et al. (2023). Hitchhiker’s Guide to Malicious Dependencies.\\
-{}[13] & Vaidya, S. (2022). Integrity and Authenticity of Software Repositories.\\
-{}[14] & OSCAR (2024). Robust Detection of OSS Supply Chain Poisoning.\\
-{}[15] & Shcherbakov, M. et al. (2021). Prototype Pollution Gadgets.\\
-{}[16] & Oldnall, E.-R. (2017). The Web of Dependencies: NPM.\\
+{}[2] & Jaisri, P.; Reid, B.; Kula, R. (2024). A Preliminary Study on Self-Contained Libraries in the NPM Ecosystem.\\
+{}[3] & Yu, S. (2024). Accurate and Efficient SBOM Generation for Software Supply Chain Security.\\
+{}[4] & Ohm, M.; Plate, H.; Sykosch, A.; Meier, M. (2020). Backstabber's Knife Collection: A Review of Open Source Software Supply Chain Attacks.\\
+{}[5] & Rahman, I.; Zahan, N.; Magill, S.; Enck, W.; Williams, L. (2024). Characterizing Dependency Update Practice of NPM, PyPI and Cargo Packages.\\
+{}[6] & Hastings, T. G. (2024). Combating Source Poisoning and Next-Generation Software Supply Chain Attacks Using Education, Tools, and Techniques.\\
+{}[7] & Wang, M.; Wu, P.; Luo, Q. (2023). Construction of Software Supply Chain Threat Portrait Based on Chain Perspective.\\
+{}[8] & Liu, C.; Chen, S.; et al. (2022). Demystifying Vulnerability Propagation via Dependency Trees in npm.\\
+{}[9] & Dependency Analysis for Software Licensing and Security. (PDF: academic/09- ...)\\
+{}[10] & Dependency Practices for Vulnerability Mitigation. (PDF: academic/10- ...)\\
+{}[11] & Detection of Software Supply Chain Attacks in Code Repositories. (PDF: academic/11- ...)\\
+{}[12] & Empirical Study on Dependency-Based Attacks in Node.js. (PDF: academic/12- ...)\\
+{}[13] & Practical Software Supply Chain Security. (PDF: academic/13- ...)\\
+{}[14] & Malicious Package Detection in NPM and PyPI using a Single Model. (PDF: academic/14- ...)\\
+{}[15] & Malicious Package Detection using Metadata Information. (PDF: academic/15- ...)\\
+{}[16] & Node package manager's dependency network robustness. (PDF: academic/16- ...)\\
+{}[17] & On the Feasibility of Cross-Language Detection of Malicious Packages in npm and PyPI. (PDF: academic/17- ...)\\
+{}[18] & On the Impact of Security Vulnerabilities in the npm and RubyGems Dependency Networks. (PDF: academic/18- ...)\\
+{}[19] & Practical Automated Detection of Malicious npm Packages. (PDF: academic/19- ...)\\
+{}[20] & Small World with High Risks. (PDF: academic/20- ...)\\
+{}[21] & Software Supply Chain Security. (PDF: academic/21- ...)\\
+{}[22] & Studying Dependency Maintenance Practices through Mining NPM. (PDF: academic/22- ...)\\
+{}[23] & Supporting Detection via Unsupervised Signature Generation. (PDF: academic/23- ...)\\
+{}[24] & Ladisa, P.; Şahin, M.; Ponta, S. E.; Rosa, M.; Martinez, M.; Barais, O. (2023). The Hitchhiker's Guide to Malicious Third-Party Dependencies.\\
+{}[25] & Oldnall, E.-R. (2017). The Web of Dependencies: A Complex Network Analysis of the NPM.\\
+{}[26] & Imtiaz, N. (2023). Toward Secure Use of Open Source Dependencies.\\
+{}[27] & Vaidya, S. (2022). Towards Ensuring Integrity and Authenticity of Software Repositories.\\
+{}[28] & Duan, R.; Alrawi, O.; Kasturi, R. P.; Elder, R.; Saltaformaggio, B.; Lee, W. (2020). Towards Measuring Supply Chain Attacks on Package Managers.\\
+{}[29] & Zheng, X.; Chen, W.; Wang, S.; Zhao, Y.; Gao, P.; Zhang, Y.; Wang, K.; Wang, H. (2024). Towards Robust Detection of OSS Supply Chain Poisoning (OSCAR).\\
+{}[30] & Shcherbakov, M.; Moosbrugger, P.; Balliu, M. (2021). Unveiling the Invisible: Prototype Pollution Gadgets via Dynamic Taint.\\
 \end{longtable}
 
 \end{document}
